10_statefulset_zeebe.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zeebe
  namespace: zeebe
spec:
  selector:
    matchLabels:
      app: zeebe
  serviceName: zeebe
  replicas: 3
  updateStrategy:
    type: RollingUpdate
  podManagementPolicy: Parallel
  template:
    metadata:
      labels:
        app: zeebe
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: zeebe
        image: camunda/zeebe:0.20.0
        ports:
        - containerPort: 26500
          name: gateway
        - containerPort: 26501
          name: command
        - containerPort: 26502
          name: internal
        readinessProbe:
          httpGet:
            path: /ready
            port: 9600
          initialDelaySeconds: 20
          periodSeconds: 5
        resources:
          requests:
            cpu: 500m
            memory: 1Gi
          limits:
            cpu: 1000m
            memory: 2Gi
        volumeMounts:
        - name: config
          mountPath: /usr/local/zeebe/conf/zeebe.cfg.toml
          subPath: zeebe.cfg.toml
        - name: config
          mountPath: /usr/local/bin/startup.sh
          subPath: startup.sh
        - name: data
          mountPath: /usr/local/zeebe/data
      volumes:
      - name: config
        configMap:
          name: zeebe-config
          defaultMode: 0744
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: zeebe-regional
      resources:
        requests:
          storage: 5Gi
