35_deployment_kibana.yml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: kibana
  namespace: zeebe
  labels:
    app: kibana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kibana
  template:
    metadata:
      labels:
        app: kibana
    spec:
      containers:
      - name: kibana
        image: docker.elastic.co/kibana/kibana-oss:6.7.0
        resources:
          requests:
            cpu: 500m
            memory: 512Mi
          limits:
            cpu: 1000m
            memory: 768Mi
        ports:
        - containerPort: 5601
          name: http
          protocol: TCP
