04_service_zeebe-desktop.yml
apiVersion: v1
kind: Service
metadata:
  name: zeebe
  namespace: zeebe
  labels:
    app: zeebe
spec:
  type: LoadBalancer
  publishNotReadyAddresses: true
  ports:
  - port: 26500
    protocol: TCP
    name: gateway
  - port: 26501
    protocol: TCP
    name: command
  - port: 26502
    protocol: TCP
    name: internal
  selector:
    app: zeebe
