22_service_elasticsearch.yml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  namespace: zeebe
  labels:
    app: elasticsearch
spec:
  clusterIP: None # <--
  ports:
  - port: 9200
    name: http
    targetPort: 9200
    protocol: TCP
  - port: 9300
    name: transport
    targetPort: 9300
    protocol: TCP
  selector:
    app: elasticsearch
