31_service_kibana.yml
apiVersion: v1
kind: Service
metadata:
  name: kibana
  namespace: zeebe
  labels:
    app: kibana
spec:
  clusterIP: None # <--
  ports:
  - port: 80
    name: http
    targetPort: 5601
    protocol: TCP
  selector:
    app: kibana
