41_service_operate.yml
apiVersion: v1
kind: Service
metadata:
  name: operate
  namespace: zeebe
  labels:
    app: operate
spec:
  clusterIP: None # <--
  ports:
  - port: 80
    name: http
    targetPort: 8080
    protocol: TCP
  selector:
    app: operate
